# crucible-executor

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOCS.md  OVERVIEW.md  README.md  flow-doctor.yaml  polygon_client.py  pyproject.toml  requirements.in  requirements.txt  ssm_secrets.py
.github/: pip-audit-ignore.txt
.github/workflows/: changelog.yml  ci.yml  gate-label-guard.yml  iam-drift-check.yml  iam-drift-post-merge.yml  merge-group-required-check-guard.yml  ruff.yml
config/: risk.yaml.example
executor/: __init__.py  auto_backfill_gap.py  backfill_eod_pnl.py  backfill_uptime.py  bracket_orders.py  champion.py  config_loader.py  connection_test.py  daemon.py  daemon_state_logger.py  data_manifest.py  deciders.py  decision_capture.py  derisk_gate.py  emergency_shutdown.py  entry_triggers.py  eod_emailer.py  eod_reconcile.py  eod_report.py  feature_lookup.py  health_status.py  ibkr.py  implementation_shortfall.py  intraday_exit_manager.py  intraday_resolve.py  intraday_snapshot.py  liquidate_all.py  log_config.py  main.py  market_hours.py  notifier.py  open_orders_artifact.py  optimizer_cutover.py  optimizer_shadow.py  order_book.py  order_book_rationale.py  polygon_price_monitor.py  portfolio_optimizer.py  position_sizer.py  preflight.py  (+14 more)
executor/strategies/: __init__.py  config.py  contract.py  exit_manager.py
executor/strategies/conformance/: README.md  __init__.py  conftest.py  kit.py  scenarios.py  test_conformance.py
infrastructure/: README.md  add-cron.sh  backfill_eod_pnl_spy.py  boot-pull.sh  health_checker.sh  install-boot-pull.sh  pre-commit-secrets  setup-ec2.sh  setup-eventbridge.sh  setup-trading-ec2.sh  trading-box-cleanup.sh
infrastructure/iam/: README.md  apply.sh  check-drift.py  check-no-foreign-writers.py  migrate-dashboard-role.sh
infrastructure/iam/alpha-engine-dashboard-role/: alpha-engine-cloudwatch-metrics.json  alpha-engine-dashboard-changelog-quarantine-writeback.json  alpha-engine-dashboard-daily-news-write.json  alpha-engine-dashboard-fleet-liveness.json  alpha-engine-dashboard-metron-sft-putobject.json  alpha-engine-dashboard-morning-signal-schedule.json  alpha-engine-dashboard-passrole-executor.json  alpha-engine-dashboard-sfn-read.json  alpha-engine-dashboard-spot-dispatch.json  alpha-engine-dashboard-ssm-logs-write.json  alpha-engine-passrole-executor.json  alpha-engine-research-access.json  alpha-engine-research-bucket-write.json  alpha-engine-ssm-read.json  managed-policies.json  mnemon-s3-access.json  vires-secrets-s3-read.json
infrastructure/iam/alpha-engine-eventbridge-sfn-role/: alpha-engine-eventbridge-sfn-role-policy.json
infrastructure/iam/alpha-engine-executor-role/: alpha-engine-cloudwatch-metrics.json  alpha-engine-flow-doctor-dynamodb.json  alpha-engine-groom-lambda-invoke.json  alpha-engine-groom-llm-provider-flip.json  alpha-engine-groom-spot-logs.json  alpha-engine-lambda-invoke.json  alpha-engine-s3-access.json  alpha-engine-sns-publish.json  alpha-engine-ssm-send.json  alpha-engine-stepfunctions-diagnose.json  alpha-engine-stepfunctions-eod.json  alpha-engine-vuln-scan-enable.json  cyphering-signal-ssm-read.json  managed-policies.json
infrastructure/iam/alpha-engine-step-functions-role/: alpha-engine-step-functions-role-policy.json
infrastructure/iam/github-actions-iam-drift-check/: iam-readonly.json  trust-policy.json
infrastructure/ops/: install-upstream-gate-validation-timer.sh  upstream-gate-dryrun-validation.sh
infrastructure/systemd/: alpha-engine-daemon.service  alpha-engine-daemon.timer  alpha-engine-daily-data.service  alpha-engine-daily-data.timer  alpha-engine-eod.service  alpha-engine-eod.timer  alpha-engine-morning.service  ibgateway.service  upstream-gate-dryrun-validation.service  upstream-gate-dryrun-validation.timer  xvfb.service
scripts/: backfill_eod_pnl_historical_state.py  backfill_eod_pnl_spy.py  backfill_trades_sector.py  backfill_trading_day.py  replay_shadow_optimizer.py
tests/: conftest.py  test_atr_rsi_vectorization_parity.py  test_auto_backfill_gap.py  test_backfill_eod_pnl.py  test_backfill_trades_sector.py  test_backfill_uptime.py  test_batch_confidence_tightening.py  test_boot_pull_timer_reconcile.py  test_boot_pull_trades_db_staleness.py  test_bracket_orders.py  test_champion.py  test_check_drift_post_merge.py  test_check_no_foreign_writers.py  test_config_loader.py  test_conformance_stock_rules.py  test_coverage_sizing_and_admission.py  test_daemon_crash_restart.py  test_daemon_heartbeat.py  test_daemon_phase0.py  test_daemon_state_logger.py  test_daemon_surveillance_refresh.py  test_decide_entries_priority_order.py  test_decider_parity.py  test_deciders_risk_events.py  test_deciders_signal_prediction_date.py  test_decision_capture.py  test_derisk_gate.py  test_e2e_signal_to_dryrun.py  test_emergency_shutdown.py  test_eod_emailer.py  test_eod_reconcile.py  test_eod_reconcile_logic.py  test_eod_report.py  test_executor_params_consumer_contract.py  test_executor_params_staleness.py  test_executor_run_precompute_kwargs.py  test_exit_manager.py  test_exit_manager_stance.py  test_export_trade_csvs_fail_loud.py  test_feature_coverage.py  (+61 more)
