[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-engine-executor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ib_insync>=0.9.86",
    "boto3>=1.43.48",
    "pyyaml>=6.0.3",
    "yfinance>=1.5.1",
    "pandas>=2.0.0",
    "numpy<3",
    "pyarrow>=25.0.0",
    "arcticdb>=6.18.7",
    "exchange-calendars>=4.5",
    "requests>=2.34.2",
    "websocket-client>=1.9.0",
    "nousergon-lib[flow-doctor,contracts]>=0.86.0",
    "krepis>=0.14.0",
    "cvxpy>=1.9.2,<1.10",
    "scikit-learn>=1.9.0,<1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["executor*"]

[tool.pytest.ini_options]
# Scope pytest to tests/ only. Without this, default discovery walks the whole
# tree and pulls in executor/connection_test.py (a CLI script matching *_test.py)
# plus any stray nested repo copies, causing sys.path collisions and spurious
# ImportErrors for modules that exist only in the current tree.
testpaths = ["tests"]

[tool.coverage.run]
source = ["executor"]

[tool.coverage.report]
# Ratchet floor (config#2533): measured coverage at introduction was 75.23%
# (`pytest tests/ --cov=executor`, 1622 passed, 4 skipped). Floor rounded
# down to the nearest integer so today's suite passes with headroom; raise
# opportunistically as coverage grows. This gates regression, not a target.
fail_under = 75
show_missing = true
